# solana-wallet-embed

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust_ci.yml
request/: get_balance.http
secrets/: password.txt  ssid.txt
swe-firmware/: Cargo.toml
swe-firmware/src/: ble.rs  main.rs  wifi.rs
swe-firmware/src/solutils/: types.rs
