[package]
name = "swe-firmware"
version = "0.1.0"
authors = ["sena <92186264+aryasena0@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["esp32c3"]
esp32c2 = ["esp-hal/esp32c2", "esp-println/esp32c2", "esp-wifi/esp32c2", "esp-backtrace/esp32c2"]
esp32c3 = ["esp-hal/esp32c3", "esp-println/esp32c3", "esp-wifi/esp32c3", "esp-backtrace/esp32c3"]

[dependencies]
aes = "0.8.4"
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [ "macros", "async"] }
esp-backtrace = { version = "0.13.0", features = [
    "exception-handler",
    "panic-handler",
    "println",
    "esp32c3",
] }
esp-hal = { version = "0.19.0", features = ["esp32c3"] }
esp-println = { version = "0.10.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.7.1", features = [
    "esp32c3",
    "phy-enable-usb",
    "utils",
    "wifi",
    "ble"
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
