[package]
name    = "swe-firmware"
version = "0.1.0"
authors = ["sena <92186264+aryasena0@users.noreply.github.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aes                 = "0.8.4"
anyhow              = { version = "1.0.86", default-features = false}
bleps               = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [ "macros", "async"] }
cfg-if              = "1.0.0"
critical-section    = "1.1.2"
crypto-bigint       = { version = "0.5.5", default-features = false }
elliptic-curve      = { version = "0.13.8", default-features = false, features = ["sec1"] }
embassy-executor    = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-futures     = "0.1.1"
embassy-net         = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync        = "0.6.0"
embassy-time        = { version = "0.3.1", features = ["generic-queue-8"] }
embassy-time-driver = { version = "0.1.0", optional = true }
embassy-usb         = { version = "0.2.0", default-features = false, optional = true }
embedded-can        = "0.4.1"
embedded-graphics   = "0.8.1"
embedded-hal        = "1.0.0"
embedded-hal-02     = { version = "0.2.7", package = "embedded-hal", features = ["unproven"] }
embedded-hal-async  = "1.0.0"
embedded-hal-bus    = "0.2.0"
embedded-io         = { version = "0.6.1", default-features = false }
embedded-io-async   = "0.6.1"
embedded-storage    = "0.3.1"
esp-alloc           = { version = "*"}
esp-backtrace       = { version = "*", features = ["exception-handler", "panic-handler", "println", "esp32c3"] }
esp-hal             = { version = "*", features = ["log", "esp32c3", "opsram-2m"] }
esp-hal-embassy     = { version = "*", features = ["esp32c3"] }
esp-hal-smartled    = { version = "*", features = ["esp32c3"] }
esp-ieee802154      = { version = "*", optional = true }
esp-println         = { version = "*", features = ["log", "esp32c3"] }
esp-storage         = { version = "*", features = ["esp32c3"] }
esp-wifi            = { version = "*", features = ["esp32c3", "ble", "async" ,"wifi", "utils", "embassy-net", "wifi-default"] }
fugit               = "0.3.7"
heapless            = "0.8.0"
hex-literal         = "0.4.1"
hmac                = { version = "0.12.1", default-features = false }
ieee802154          = "0.6.1"
lis3dh-async        = "0.9.3"
log                 = "0.4.22"
nb                  = "1.1.0"
p192                = { version = "0.13.0", default-features = false, features = ["arithmetic"] }
p256                = { version = "0.13.2", default-features = false, features = ["arithmetic"] }
portable-atomic     = { version = "1.6.0",  default-features = false }
sha2                = { version = "0.10.8", default-features = false }
smart-leds          = "0.4.0"
smoltcp             = { version = "0.11.0", default-features = false, features = [ "medium-ethernet", "socket-raw"] }
ssd1306             = "0.8.4"
static_cell         = { version = "2.1.0", features = ["nightly"] }
serde               = { version = "1.0.204", features = ["derive"], default-features = false }
serde-json-core     = "0.5"
usb-device          = "0.3.2"
usbd-serial         = "0.2.2"

[features]
default                   = ["esp32c3", "wifi"]
wifi                      = ["esp-wifi/wifi", "embedded-hal-02", "embedded-hal", "embassy-generic-timers", "opsram-2m"]
ble                       = ["esp-wifi/ble", "embedded-hal-02", "embedded-hal", "embassy-generic-timers", "opsram-2m"]
esp32c2                   = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy/esp32c2", "esp-println/esp32c2", "esp-storage/esp32c2", "esp-wifi/esp32c2", ]
esp32c3                   = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy/esp32c3", "esp-println/esp32c3", "esp-storage/esp32c3", "esp-wifi/esp32c3", "esp-hal-smartled/esp32c3"]
embedded-hal-02           = ["esp-hal/embedded-hal-02"]
embedded-hal              = ["esp-hal/embedded-hal"]
embassy-generic-timers    = ["embassy-time/generic-queue-8"]
opsram-2m                 = ["esp-hal/opsram-2m"]

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 3
lto              = 'fat'
overflow-checks  = false